tests/negative/typecheck/unit_const.orng
// unit_const.orng:12:16: error: symbol `Ident` must start with an lowercase letter
//     const Ident = ()
//               ^
// unit_const.orng:13:19: error: expected a type
//     const x: Ident = {}
//                  ^
// unit_const.orng:13:19: error: expected a type
//     const x: Ident = {}
//                  ^
// 
fn main() -> Int {
    const Ident = ()
    const x: Ident = {}
    _ = x
    320
} 